# advent-of-codspeed-2024

./: Cargo.toml
.cargo/: config.toml
benches/: bench_day1.rs  bench_day2.rs  bench_day3.rs  bench_day4.rs  benches.rs
src/: day01.rs  day02.rs  day03.rs  day05.rs  day06.rs  day08.rs  day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day2.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
