[package]
name = "advent-of-codspeed-2024"
version = "0.1.0"
authors = ["Jan Scheer<jhscheer@users.noreply.github.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rustc-serialize = "0.3.25"
atoi = "2.0.0"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "*" }

[[bench]]
name = "bench_day1"
harness = false

[[bench]]
name = "bench_day2"
harness = false

[[bench]]
name = "bench_day3"
harness = false

[[bench]]
name = "bench_day4"
harness = false
