[package]
name = "advent-of-codspeed-2024"
version = "0.1.0"
authors = ["Jan Scheer<jhscheer@users.noreply.github.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rustc-serialize = "0.3.25"
arrayvec = "0.7.6"
itoa = "1.0.14"
atoi_simd = "0.16.0"
rustc-hash = "2.1.0"
memchr = "2.7.4"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "*" }

[[bench]]
name = "benches"
harness = false
